LPS-143412 portal-language-lang: gw buildLang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -14714,6 +14714,8 @@ the-blog-entry-title=Títol de l'entrada del blog
 the-blog-entry-url=La URL de l'entrada del blog
 the-blog-entry-was-published-successfully=L'entrada del blog s'ha publicat correctament.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=La configuració del pla tècnic té errors que poden originar resultats inesperats. Feu servir el tauler de previsualització per revisar aquests errors.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=La URL de l'enllaç d'interès
 the-browser's-remote-address=L'adreça remota del navegador
 the-browser's-remote-host=L'amfitrió remot del navegador
@@ -14829,6 +14831,8 @@ the-due-dates-for-these-tasks-have-been-updated=Les dates de venciment d'aqueste
 the-duration-must-be-greater-than-or-equal-to-0=La durada ha de ser superior o igual a 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=La configuració de l'element té errors que poden originar resultats inesperats.
 the-element-has-been-removed=L'element a estat eliminat.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=L'element {0} s'ha mogut fins a {1}.
 the-element-x-was-removed=L'element {0} s'ha eliminat.
 the-email-address-associated-with-your-openid-account-is-already-being-used=L'adreça de correu associada al compte OpenID ja està essent utilitzada.
