--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -14718,6 +14718,8 @@ the-blog-entry-title=The blog entry title
 the-blog-entry-url=The blog entry URL
 the-blog-entry-was-published-successfully=The blog entry was published successfully.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors.
+the-blueprint-was-created-successfully=The blueprint was created successfully.
+the-blueprint-was-saved-successfully=The blueprint was saved successfully.
 the-bookmark-entry-url=The bookmark entry URL
 the-browser's-remote-address=The browser's remote address
 the-browser's-remote-host=The browser's remote host
@@ -14833,6 +14835,8 @@ the-due-dates-for-these-tasks-have-been-updated=The due dates for these tasks ha
 the-duration-must-be-greater-than-or-equal-to-0=The duration must be greater than or equal to 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results.
 the-element-has-been-removed=The element has been removed.
+the-element-was-created-successfully=The element was created successfully.
+the-element-was-saved-successfully=The element was saved successfully.
 the-element-x-was-moved-to-x=The element {0} was moved to {1}.
 the-element-x-was-removed=The element {0} was removed.
 the-email-address-associated-with-your-openid-account-is-already-being-used=The email address associated with your OpenID account is already being used.
