--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -14714,6 +14714,8 @@ the-blog-entry-title=El título de la entrada del blog
 the-blog-entry-url=La URL de la entrada del blog
 the-blog-entry-was-published-successfully=La entrada de blog se publicó correctamente.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=La configuración del plano contiene errores que pueden causar resultados inesperados. Use el panel de vista previa para revisar estos errores.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=La URL del enlace favorito
 the-browser's-remote-address=La dirección IP remota del usuario
 the-browser's-remote-host=El nombre del equipo remoto del usuario
@@ -14829,6 +14831,8 @@ the-due-dates-for-these-tasks-have-been-updated=Se han actualizado las fechas de
 the-duration-must-be-greater-than-or-equal-to-0=La duración debe ser mayor o igual que 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=La configuración del elemento contiene errores que pueden causar resultados inesperados.
 the-element-has-been-removed=Se ha quitado el elemento.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=El elemento {0} se movió a {1}.
 the-element-x-was-removed=Se quitó el elemento {0}.
 the-email-address-associated-with-your-openid-account-is-already-being-used=La dirección de e-mail asociada con su cuenta en OpenID ya está en uso.
