--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -14710,6 +14710,8 @@ the-blog-entry-title=Blogin otsikko
 the-blog-entry-url=Blogin merkinnän URL-osoite.
 the-blog-entry-was-published-successfully=Blogikirjoituksen julkaisu onnistui.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=Blueprint-kokoonpanossa on virheitä, jotka voivat aiheuttaa odottamattomia tuloksia. Tarkasta nämä virheet käyttämällä esikatselupaneelia.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=Kirjanmerkkien URL-osoite
 the-browser's-remote-address=Selaimen osoite
 the-browser's-remote-host=Selaimen host
@@ -14825,6 +14827,8 @@ the-due-dates-for-these-tasks-have-been-updated=Näiden tehtävien määräpäiv
 the-duration-must-be-greater-than-or-equal-to-0=Aikavälin on oltava vähintään 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=Elementin kokoonpanossa on virheitä, jotka voivat aiheuttaa odottamattomia tuloksia.
 the-element-has-been-removed=Elementti on poistettu.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=Elementti {0} siirrettiin kohteeseen {1}.
 the-element-x-was-removed=Elementti {0} poistettiin.
 the-email-address-associated-with-your-openid-account-is-already-being-used=Sähköpostiosoite, mikä on liitetty OpenID tiliisi on jo käytössä.
