--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -14714,6 +14714,8 @@ the-blog-entry-title=Le titre du ticket de blog
 the-blog-entry-url=L'URL d'entrée de blogue
 the-blog-entry-was-published-successfully=L'entrée de blog a bien été publiée.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=La configuration du plan comporte des erreurs qui peuvent entraîner des résultats inattendus. Utilisez le panneau d'aperçu pour examiner ces erreurs.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=L'URL d'entrée du signet
 the-browser's-remote-address=Le browser&#039 ; adresse à distance de s
 the-browser's-remote-host=Le browser&#039 ; centre serveur à distance de s
@@ -14829,6 +14831,8 @@ the-due-dates-for-these-tasks-have-been-updated=Les dates d'échéances de ces t
 the-duration-must-be-greater-than-or-equal-to-0=La durée doit être supérieure ou égale à 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=La configuration de l'élément comporte des erreurs pouvant entraîner des résultats inattendus.
 the-element-has-been-removed=L'élément a été supprimé.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=L' élément {0} a été déplacé dans {1}.
 the-element-x-was-removed=L' élément {0} a été supprimé.
 the-email-address-associated-with-your-openid-account-is-already-being-used=L'adresse émail associée a votre compte OpenID est déjà utilisée.
