--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=ब्लॉग entry यूआरएल
 the-blog-entry-url=ब्लॉग entry यूआरएल
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=बुकमार्क एंट्री यूआरएल (Automatic Translation)
 the-browser's-remote-address=ब्राउज़र के remote पता
 the-browser's-remote-host=ब्राउज़र के remote host
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=इन कार्यों क
 the-duration-must-be-greater-than-or-equal-to-0=अवधि 0 से अधिक या उसके बराबर होनी चाहिए। (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=तत्व को हटा दिया गया है। (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=आपके ओपनआईडी अकाउंट से जुड़े ईमेल एड्रेस का इस्तेमाल पहले से ही किया जा रहा है। (Automatic Translation)
