--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -14715,6 +14715,8 @@ the-blog-entry-title=A blog bejegyzés címe
 the-blog-entry-url=A blog belépő URL-je
 the-blog-entry-was-published-successfully=A blogbejegyzés sikeresen közzétéve.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=A tervrajz konfigurációja hibákat tartalmaz, amelyek váratlan eredményekhez vezethetnek. A hibákat az előnézet panelje segítségével tekintheti meg.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=A könyvjelző belépő URL-je
 the-browser's-remote-address=A böngésző távoli címe
 the-browser's-remote-host=A böngésző távoli hostja
@@ -14830,6 +14832,8 @@ the-due-dates-for-these-tasks-have-been-updated=A feladatok esedékességi dátu
 the-duration-must-be-greater-than-or-equal-to-0=Az időtartam csak 0 vagy nagyobb lehet.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=Az elem konfigurációja hibákat tartalmaz, amelyek váratlan eredményekhez vezethetnek.
 the-element-has-been-removed=Az elemet eltávolították.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=A {0} elem a {1} helyre került.
 the-element-x-was-removed=A {0} elem eltávolítva.
 the-email-address-associated-with-your-openid-account-is-already-being-used=Az e-mail cím, amely az OpenID-al van összekötve, már használatban van.
