--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -14715,6 +14715,8 @@ the-blog-entry-title=De blog-URL
 the-blog-entry-url=De blog-URL
 the-blog-entry-was-published-successfully=De bloginvoer is gepubliceerd.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=De configuratie van de blauwdruk bevat fouten die onverwachte resultaten kunnen opleveren. Gebruik het voorbeeldpaneel om deze fouten te bekijken.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=De bladwijzer-URL
 the-browser's-remote-address=IP-adres van de browser
 the-browser's-remote-host=Externe host van de browser
@@ -14830,6 +14832,8 @@ the-due-dates-for-these-tasks-have-been-updated=De vervaldatums voor deze taken 
 the-duration-must-be-greater-than-or-equal-to-0=De duur moet groter dan of gelijk zijn aan 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=De elementconfiguratie bevat fouten die onverwachte resultaten kunnen opleveren.
 the-element-has-been-removed=Het element is verwijderd.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=Het element {0} werd verplaatst naar {1}.
 the-element-x-was-removed=Het element {0} werd verwijderd.
 the-email-address-associated-with-your-openid-account-is-already-being-used=Het e-mailadres dat is gekoppeld aan uw OpenID is al in gebruik.
