--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=Título de uma entrada de blog
 the-blog-entry-url=A URL do blog
 the-blog-entry-was-published-successfully=A entrada do blog foi publicada com sucesso.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=A configuração de blueprint possui erros que podem causar resultados inesperados. Use o painel de visualização para revisar os erros.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL do Favorito
 the-browser's-remote-address=O endereço remoto do navegador
 the-browser's-remote-host=O servidor remoto do navegador
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Os prazos para estas tarefas for
 the-duration-must-be-greater-than-or-equal-to-0=A duração deve ser maior do que ou igual a 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=A configuração de elemento possui erros que podem causar resultados inesperados.
 the-element-has-been-removed=O elemento foi removido.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=O elemento {0} foi movido para {1}.
 the-element-x-was-removed=O elemento {0} foi removido.
 the-email-address-associated-with-your-openid-account-is-already-being-used=O endereço de email associado com sua conta OpenID já está sendo utilizado.
