--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -14714,6 +14714,8 @@ the-blog-entry-title=Título de uma entrada de blog
 the-blog-entry-url=URL de uma entrada de blog
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL do bookmark
 the-browser's-remote-address=O endereço remoto do browser
 the-browser's-remote-host=O servidor remoto do browser
@@ -14829,6 +14831,8 @@ the-due-dates-for-these-tasks-have-been-updated=As datas de vencimento dessas ta
 the-duration-must-be-greater-than-or-equal-to-0=A duração deve ser maior ou igual a 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=O elemento foi removido. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=O endereço de email associado à sua conta OpenID já está a ser utilizado.
