--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=Tiêu đề bài viết blog
 the-blog-entry-url=Liên kết của bài viết blog
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL mục nhập dấu trang (Automatic Translation)
 the-browser's-remote-address=Địa chỉ của người duyệt
 the-browser's-remote-host=Tên máy của trình duyệt thông tin từ xa
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Ngày đến hạn cho các tác
 the-duration-must-be-greater-than-or-equal-to-0=Thời gian phải lớn hơn hoặc bằng 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=Phần tử đã bị loại bỏ. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=Thư điện tử gắn với tài khoản OpenID của bạn đã được đăng ký sử dụng.
