--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -14714,6 +14714,8 @@ the-blog-entry-title=Der Titel des Blogeintrags
 the-blog-entry-url=Die URL des Blogeintrags
 the-blog-entry-was-published-successfully=Der Blogeintrag wurde erfolgreich veröffentlicht.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=Die Blueprint-Konfiguration enthält Fehler, die zu unerwarteten Ergebnissen führen können. Verwenden Sie das Vorschaufenster, um diese Fehler zu überprüfen.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=Die Lesezeichen-URL
 the-browser's-remote-address=Adresse des Browsers
 the-browser's-remote-host=Hostname des Browsers
@@ -14829,6 +14831,8 @@ the-due-dates-for-these-tasks-have-been-updated=Die Fälligkeitsdaten für diese
 the-duration-must-be-greater-than-or-equal-to-0=Die Dauer muss größer oder gleich 0 sein.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=Die Elementkonfiguration enthält Fehler, die zu unerwarteten Ergebnissen führen können.
 the-element-has-been-removed=Das Element wurde entfernt.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=Das Element {0} wurde verschoben zu {1}.
 the-element-x-was-removed=Das Element {0} wurde entfernt.
 the-email-address-associated-with-your-openid-account-is-already-being-used=Die E-Mail-Adresse, die mit Ihrem OpenID-Konto verbunden ist, wird bereits verwendet.
