--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=The blog entry title (Automatic Copy)
 the-blog-entry-url=The blog entry URL (Automatic Copy)
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=The bookmark entry URL (Automatic Copy)
 the-browser's-remote-address=The browser's remote address (Automatic Copy)
 the-browser's-remote-host=The browser's remote host (Automatic Copy)
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=The due dates for these tasks ha
 the-duration-must-be-greater-than-or-equal-to-0=The duration must be greater than or equal to 0. (Automatic Copy)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=The element has been removed. (Automatic Copy)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=The email address associated with your OpenID account is already being used. (Automatic Copy)
