--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=URL blog entry
 the-blog-entry-url=URL blog entry
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL entri bookmark (Automatic Translation)
 the-browser's-remote-address=Browser alamat remote
 the-browser's-remote-host=Browser remote host
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Tanggal jatuh tempo untuk tugas-
 the-duration-must-be-greater-than-or-equal-to-0=Durasi harus lebih besar dari atau sama dengan 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=Elemen telah dihapus. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=Alamat email yang terkait dengan akun OpenID Anda sudah digunakan. (Automatic Translation)
