--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -14713,6 +14713,8 @@ the-blog-entry-title=Log dell'articolo del blog
 the-blog-entry-url=URL dell'articolo del blog
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=L'URL del segnalibro
 the-browser's-remote-address=Indirizzo remoto del browser
 the-browser's-remote-host=Host remoto del browser
@@ -14828,6 +14830,8 @@ the-due-dates-for-these-tasks-have-been-updated=Le date di scadenza per queste a
 the-duration-must-be-greater-than-or-equal-to-0=La durata deve essere maggiore o uguale a 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=L'elemento è stato rimosso. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=L' elemento {0} è stato spostato in {1}.
 the-element-x-was-removed=L' elemento {0} è stato rimosso.
 the-email-address-associated-with-your-openid-account-is-already-being-used=L'indirizzo email associato con il tuo account OpenID è già presente.
