--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=URL intrare de blog
 the-blog-entry-url=URL intrare de blog
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL-ul intrării marcajului în document (Automatic Translation)
 the-browser's-remote-address=Adresa indepartata a browser-ului
 the-browser's-remote-host=Gazda indepartata a broeser-ului
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Datele scadente pentru aceste ac
 the-duration-must-be-greater-than-or-equal-to-0=Durata trebuie să fie mai mare sau egală cu 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=Elementul a fost eliminat. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=Adresa de e-mail asociată contului OpenID este deja utilizată. (Automatic Translation)
