--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=URL adresa blogového príspevku
 the-blog-entry-url=URL adresa blogového príspevku
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL adresa záložky
 the-browser's-remote-address=Vzdialená adresa prehliadača
 the-browser's-remote-host=Vzdialený hostiteľ prehliadača
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Termíny nádchy pre tieto úloh
 the-duration-must-be-greater-than-or-equal-to-0=Trvanie musí byť väčšie alebo rovné 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=Prvok bol odstránený. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=E-mailová adresa priradená k vašemu OpenID účtu je už použitá.
