--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=Naslov vnosa v spletnem dnevniku (Automatic Translation)
 the-blog-entry-url=URL vnosa v spletnem dnevniku (Automatic Translation)
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL vnosa zaznamkov (Automatic Translation)
 the-browser's-remote-address=Oddaljen naslov brskalnika
 the-browser's-remote-host=Oddaljeni gostitelj brskalnika
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Datumi zapadlosti za ta opravila
 the-duration-must-be-greater-than-or-equal-to-0=Trajanje mora biti večje ali enako 0. (Automatic Translation)
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=Element je bil odstranjen. (Automatic Translation)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=The element {0} was moved to {1}. (Automatic Copy)
 the-element-x-was-removed=The element {0} was removed. (Automatic Copy)
 the-email-address-associated-with-your-openid-account-is-already-being-used=E-poštni naslov, povezan z računom OpenID, se že uporablja. (Automatic Translation)
