--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=URL för bloginlägget
 the-blog-entry-url=URL för bloginlägget
 the-blog-entry-was-published-successfully=Blogginlägget har publicerats.
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=Skisskonfigurationen har fel som kan orsaka oväntade resultat. Använd förhandsgranskningspanelen för att granska dessa fel.
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=URL för bokmärkespost
 the-browser's-remote-address=Webbläsarens IP-adressen
 the-browser's-remote-host=Webbläsarens värdnamn
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=Förfallodatumen för dessa uppg
 the-duration-must-be-greater-than-or-equal-to-0=Varaktigheten måste vara större än eller lika med 0.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=Elementkonfigurationen har fel som kan orsaka oväntade resultat.
 the-element-has-been-removed=Elementet har tagits bort.
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=Elementet {0} har flyttats till {1}.
 the-element-x-was-removed=Elementet {0} har tagits bort.
 the-email-address-associated-with-your-openid-account-is-already-being-used=E-postadressen som är kopplad till ditt OpenID-konto används redan.
