--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -14712,6 +14712,8 @@ the-blog-entry-title=வலைப்பதிவு இடுகை தலைப
 the-blog-entry-url=வலைப்பதிவு இடுகை URL
 the-blog-entry-was-published-successfully=The blog entry was published successfully. (Automatic Copy)
 the-blueprint-configuration-has-errors-that-may-cause-unexpected-results.-use-the-preview-panel-to-review-these-errors=The blueprint configuration has errors that may cause unexpected results. Use the preview panel to review these errors. (Automatic Copy)
+the-blueprint-was-created-successfully=The blueprint was created successfully. (Automatic Copy)
+the-blueprint-was-saved-successfully=The blueprint was saved successfully. (Automatic Copy)
 the-bookmark-entry-url=புக்மார்க் நுழைவு URL
 the-browser's-remote-address=The browser's remote address (Automatic Copy)
 the-browser's-remote-host=The browser's remote host (Automatic Copy)
@@ -14827,6 +14829,8 @@ the-due-dates-for-these-tasks-have-been-updated=The due dates for these tasks ha
 the-duration-must-be-greater-than-or-equal-to-0=கால அளவு 0 ஐ விட அதிகமாகவோ அல்லது சமமாகவோ இருக்க வேண்டும்.
 the-element-configuration-has-errors-that-may-cause-unexpected-results=The element configuration has errors that may cause unexpected results. (Automatic Copy)
 the-element-has-been-removed=The element has been removed. (Automatic Copy)
+the-element-was-created-successfully=The element was created successfully. (Automatic Copy)
+the-element-was-saved-successfully=The element was saved successfully. (Automatic Copy)
 the-element-x-was-moved-to-x=உறுப்பு {0}, {1} க்கு நகர்த்தப்பட்டது.
 the-element-x-was-removed=உறுப்பு {0} நீக்கப்பட்டது.
 the-email-address-associated-with-your-openid-account-is-already-being-used=உங்கள் OpenID கணக்குடன் தொடர்புடைய மின்னஞ்சல் முகவரி ஏற்கனவே பயன்படுத்தப்படுகிறது.
